push task finds jars in pipeline; remove crazy jvm opts